添加基于socket的调试框架,客户端，服务端基本框架完成.